<resources>
    <string name="app_name">Contacts</string>
    <string name="user_name">Name</string>
    <string name="first_user_number">first number</string>
    <string name="second_user_number">second number</string>
    <string name="avatar">avatar</string>
    <string name="end_line">endLine</string>
    <string name="birth_date">Birth Date</string>
    <string name="date_of_BD">DATE</string>
    <string name="annotation_for_switcher">You can turn on/off notification</string>
    <string name="address_label">Address</string>
    <string name="residence_address">Residence Address</string>
    <string name="emails_label">E-Mails</string>
    <string name="email1_label">First e-mail</string>
    <string name="email2_label">Second e-mail</string>
    <string name="first_email">first_email</string>
    <string name="second_email">second_email</string>
    <string name="button_add">Add</string>
    <string name="contact_count">0</string>
    <string name="logo_image">logoImage</string>
    <string name="channel_name">channel_name</string>
    <string name="channel_description">channel_description</string>
    <string name="birthday_notification">Today is %s birthday!</string>
    <string name="empty_date">Date not set</string>
    <string name="empty_date_toast_message">Set date to set notification</string>
    <string name="off_notification_toast_message">Notification is off</string>
    <string name="on_notification_toast_message">Notification is on</string>
    <string name="permission_denied_toast_message">You need to set permission to read contacts</string>
    <string name="date_format_for_contact_details">%d %s</string>
    <string name="permission_granted_toast_message">Permission successfully granted</string>
</resources>