<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/contactListItem"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/avatar"
        android:contentDescription="@string/avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/segoe"
        android:text="@string/user_name"
        android:textColor="@color/Font"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toTopOf="@+id/avatar" />

    <TextView
        android:id="@+id/userNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/segoe"
        android:text="@string/first_user_number"
        android:textColor="@color/Font"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/avatar" />

    <ImageView
        android:id="@+id/endLine"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/end_line"
        android:contentDescription="@string/end_line"
        app:layout_constraintEnd_toEndOf="@+id/userNumber"
        app:layout_constraintStart_toStartOf="@+id/userName"
        app:layout_constraintTop_toBottomOf="@+id/avatar"
        app:srcCompat="@drawable/end_line" />
</androidx.constraintlayout.widget.ConstraintLayout>