<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/detailsContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_white"
    android:backgroundTint="#FFFFFF">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/avatar" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/segoe"
        android:text="@string/user_name"
        android:textColor="@color/Font"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toTopOf="@+id/avatar" />

    <TextView
        android:id="@+id/userNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segoe"
        android:text="@string/first_user_number"
        android:textColor="@color/Font"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/secondUserNumber"
        app:layout_constraintStart_toStartOf="@+id/userName"
        app:layout_constraintTop_toBottomOf="@+id/userName" />

    <TextView
        android:id="@+id/secondUserNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/segoe"
        android:text="@string/second_user_number"
        android:textColor="@color/side_color"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/avatar"
        app:layout_constraintStart_toStartOf="@+id/userNumber"
        app:layout_constraintTop_toBottomOf="@id/userNumber" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/scroll_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatar">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/birtDateInscription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/segoe"
                android:text="@string/birth_date"
                android:textColor="@color/Font"
                android:textSize="18sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/details_fields">

                <TextView
                    android:id="@+id/birhDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/segoe"
                    android:text="@string/date_of_BD"
                    android:textColor="@color/Font"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/notificationSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="32dp"
                    android:backgroundTint="#FFFFFF"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/notificationInscription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/segoe"
                    android:text="@string/annotation_for_switcher"
                    android:textColor="@color/side_color"
                    android:textSize="12sp"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/notificationSwitch"
                    app:layout_constraintTop_toBottomOf="@+id/notificationSwitch" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/addressInscription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/segoe"
                android:text="@string/residence_address"
                android:textColor="@color/Font"
                android:textSize="18sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/details_fields">

                <TextView
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/segoe"
                    android:text="@string/address_label"
                    android:textColor="@color/Font"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/addButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="48dp"
                    android:background="@drawable/button"
                    android:fontFamily="@font/segoe"
                    android:text="@string/button_add"
                    android:textAlignment="center"
                    android:textColor="@color/side_font"
                    android:textSize="12sp"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/emailInscription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/segoe"
                android:text="@string/emails_label"
                android:textColor="@color/Font"
                android:textSize="18sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/details_fields">

                <TextView
                    android:id="@+id/firstEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/segoe"
                    android:text="@string/first_email"
                    android:textColor="@color/Font"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/firstEmailInscription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="32dp"
                    android:fontFamily="@font/segoe"
                    android:text="@string/email1_label"
                    android:textColor="@color/side_color"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:background="@drawable/end_line"
                    android:contentDescription="@string/button_add"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/firstEmailInscription"
                    app:layout_constraintStart_toStartOf="@+id/firstEmail"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/end_line" />

                <TextView
                    android:id="@+id/secondEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="32dp"
                    android:fontFamily="@font/segoe"
                    android:text="@string/second_email"
                    android:textColor="@color/Font"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView5" />

                <TextView
                    android:id="@+id/secondEmailInscription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:fontFamily="@font/segoe"
                    android:text="@string/email2_label"
                    android:textColor="@color/side_color"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/secondEmail" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>